PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Bid__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Customer_Bid_Deadline__c</fullName>
        <label>Customer Bid Deadline</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Service_Approved_Date__c</fullName>
        <label>Customer Service Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Type__c</fullName>
        <label>Bid Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Pharmagen</fullName>
                </value>
                <value>
                    <fullName>ABC Progen</fullName>
                </value>
                <value>
                    <fullName>BASE/DSH</fullName>
                </value>
                <value>
                    <fullName>ClarusOne</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Direct and Indirect</fullName>
                </value>
                <value>
                    <fullName>Econdisc</fullName>
                </value>
                <value>
                    <fullName>Government Pricing</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Net Indirect Pricing</fullName>
                </value>
                <value>
                    <fullName>ROS</fullName>
                </value>
                <value>
                    <fullName>RXSS</fullName>
                </value>
                <value>
                    <fullName>Sams Club</fullName>
                </value>
                <value>
                    <fullName>Walgreens</fullName>
                </value>
                <value>
                    <fullName>Humana Indirect retail</fullName>
                </value>
                <value>
                    <fullName>Humana Indirect CII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Phoenix_Is_Bid_Account__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Data_Fee__c</fullName>
        <label>Data Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dropped_Comments__c</fullName>
        <label>Dropped Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval_Comments__c</fullName>
        <label>Finance Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval__c</fullName>
        <label>Finance Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Formal_Offer_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Formal Offer Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Group_VIP__c</fullName>
        <label>Group VIP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Initial_Order_Discount_Type__c</fullName>
        <label>Initial Order Discount Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>WAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Initial_Order_Discount_of_Days__c</fullName>
        <label>Initial Order Discount # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Internal_Target_Date__c</fullName>
        <label>Internal Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Checklist_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Checklist Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Re_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Re Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_MarketingLead_Approved_date__c</fullName>
        <label>Phoenix_Marketinglead__Approved_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Approval__c</fullName>
        <label>Approve / Reject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Head_Approval__c</fullName>
        <label>Marketing Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Head_Comments__c</fullName>
        <label>Marketing Head Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Mck_RAD_Rebate__c</fullName>
        <label>Mck &amp; RAD Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_OTB_Direct_Indirect__c</fullName>
        <description>Used for OTB template</description>
        <label>OTB Direct / Indirect</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_OTB_Marketing_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pharmabid Marketing Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phoenix_OTB_Marketing_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_OTC_Bid_Version__c</fullName>
        <inlineHelpText>Current version of bid</inlineHelpText>
        <label>Bid Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Offer_Valid_up_to__c</fullName>
        <label>Offer Valid up to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Platform_Name__c</fullName>
        <label>Platform Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pharma Bid OTB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Re-Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proactive_Reactive__c</fullName>
        <label>Proactive/Reactive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Reactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Admin_Fee_Basis__c</fullName>
        <label>Proposed Admin Fee Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Cardinal_Position__c</fullName>
        <label>Phoenix Proposed Cardinal Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Cash_Terms__c</fullName>
        <label>Proposed Cash Terms %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Initial_Order_Discount__c</fullName>
        <label>Proposed Initial Order Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Major_Position__c</fullName>
        <label>Phoenix Proposed Major Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Position__c</fullName>
        <label>Proposed Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Rebate_Basis__c</fullName>
        <label>Proposed Rebate Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Neet</fullName>
                    <isActive>false</isActive>
                    <label>Neet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_SSA_No_of_Days__c</fullName>
        <label>Proposed SSA # No of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Sales_Out_Promotion__c</fullName>
        <label>Proposed Sales Out Promotion %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_VIP_Rebate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed VIP Rebate</label>
        <referenceTo>Phoenix_Bid_VIP_Rebate__c</referenceTo>
        <relationshipLabel>Bids (Proposed VIP Rebate)</relationshipLabel>
        <relationshipName>Bids1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Value_Admin_Fee__c</fullName>
        <label>Admin Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Value_Est_VIP__c</fullName>
        <label>Proposed Est VIP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_RCA_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RCA / IPA Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Phoenix_Contract__c.Phoenix_Is_RCA_Contract__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Phoenix_Contract__c.Phoenix_Is_IPA_Contract__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_RCA_Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_REMS_Program_Fee__c</fullName>
        <label>REMS Program Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate__c</fullName>
        <label>Proposed Rebate % (Mark All)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Reference_Contracts__c</fullName>
        <label>Contracts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Required_Cold_Storage__c</fullName>
        <label>Required Cold Storage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Review_Details__c</fullName>
        <label>Pricing Review Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Customer_Group__c</fullName>
        <formula>TEXT(Phoenix_Customer__r.Phoenix_Customer_Group_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Class of Trade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Out_Promotion_of_Days__c</fullName>
        <label>Sales Out Promotion # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Person_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Person_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bids1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Select_Wholesaler__c</fullName>
        <inlineHelpText>Contract Management Fee (Wholesaler) Name</inlineHelpText>
        <label>Contr. Management Fee (Wholesaler) Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Source Program (No CM Fee Applies)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Sent_to_Customer_Date__c</fullName>
        <label>Sent to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sent_to_Vistex_Date__c</fullName>
        <label>Sent to Vistex Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Contracts Approved</fullName>
                </value>
                <value>
                    <fullName>SCM Approved</fullName>
                </value>
                <value>
                    <fullName>Marketing Approved</fullName>
                </value>
                <value>
                    <fullName>Finance Approved</fullName>
                </value>
                <value>
                    <fullName>Proposal Submitted</fullName>
                </value>
                <value>
                    <fullName>Proposal Accepted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Template_Type_GSMS__c</fullName>
        <label>Template Type (Direct or Indirect)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Template_Type_Humana__c</fullName>
        <label>Template Type (Humana)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Humana Indirect retail</fullName>
                </value>
                <value>
                    <fullName>Humana Indirect CII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Template_Type_ROS__c</fullName>
        <label>Template Type (ROS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ROS</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Template_Type__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Progen</fullName>
                </value>
                <value>
                    <fullName>ABC Pharmagen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Ultimate_Parent__c</fullName>
        <inlineHelpText>Used to get the top most parent</inlineHelpText>
        <label>Ultimate Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Value_Est_VIP_Type__c</fullName>
        <label>VIP Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                    <default>true</default>
                    <label>Net</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Agreement_Number__c</fullName>
        <label>Vistex Agreement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Update_Comments__c</fullName>
        <label>Vistex Update Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Update__c</fullName>
        <label>Vistex Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_WMT_Direct_Rebate__c</fullName>
        <label>WMT Direct Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_is_OTC_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is OTC Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Direct_Bid_for_CenterWell__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Direct Bid for CenterWell(Humana)</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Bids (RFP Direct Bid for CenterWell(Humana))</relationshipLabel>
        <relationshipName>Bids1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ratification_Comment__c</fullName>
        <label>Ratification Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Change__c</fullName>
        <formula>( Vision_Current_Total__c -  Vision_Previous_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Total__c</fullName>
        <label>Current Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Per_Change__c</fullName>
        <formula>IF((Vision_Current_Total__c - Vision_Previous_Total__c) != 0, IF(Vision_Previous_Total__c != 0, ((Vision_Current_Total__c - Vision_Previous_Total__c )/Vision_Previous_Total__c)/100, 0), 0)</formula>
        <label>% Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Previous_Total__c</fullName>
        <label>Previous Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Annual_Impact__c</fullName>
        <label>Total Annual Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Bid_Line_Items__c</fullName>
        <label>Total # Bid Line Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_FY_Business_Impact__c</fullName>
        <label>Total FY Business Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Total_New_Award_s__c</fullName>
        <label>Total # New Award(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_No_Effect_s__c</fullName>
        <label>Total # No Effect(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Price_Change_s__c</fullName>
        <label>Total # Price Change(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Price_Volume_Change_s__c</fullName>
        <label>Total # Price &amp; Volume Change(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Product_Lost_s__c</fullName>
        <label>Total # Product Lost(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Volume_Change_s__c</fullName>
        <label>Total # Volume Change(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bid</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_Name__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_OTC_Bid_Version__c</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Customer_Type__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Status__c</columns>
        <columns>Phoenix_Is_Re_Bid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Phoenix_Previous_Bid__c</columns>
        <columns>Phoenix_Internal_Target_Date__c</columns>
        <columns>Phoenix_Bid_Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Bids1</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_Name__c</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Is_Re_Bid__c</columns>
        <columns>Phoenix_Previous_Bid__c</columns>
        <columns>Phoenix_Salesperson__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Bid_Owner__c</columns>
        <columns>Phoenix_Bid_Submitted_Date__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Internal_Target_Date__c</columns>
        <columns>Phoenix_Customer_Bid_Deadline_Date__c</columns>
        <columns>Phoenix_Sales_Person_2__c</columns>
        <columns>Contracts_Approver__c</columns>
        <columns>Phoenix_Customer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Bids</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_Customer_Response</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Awaiting Customer Response</label>
    </listViews>
    <listViews>
        <fullName>Bids_Past_Due</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_Name__c</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Status__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Bid_Deadline_Date__c</columns>
        <columns>Phoenix_Internal_Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Internal_Target_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Is_Current_User_Bid_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Phoenix_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed-Draft,Contracts Rejected,Customer&apos;s Update,Customer Rejected,Vistex Update,Vistex Update Rejected,Vistex Customer Code Update</value>
        </filters>
        <label>Bids - Past Due</label>
    </listViews>
    <listViews>
        <fullName>Bids_Upcoming_Due</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_Name__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Status__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Internal_Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User_Bid_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Phoenix_Internal_Target_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Phoenix_Internal_Target_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Bids - Upcoming Due</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Only_Bids</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_Name__c</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Is_Re_Bid__c</columns>
        <columns>Phoenix_Previous_Bid__c</columns>
        <columns>Phoenix_Customer_Type__c</columns>
        <columns>Phoenix_Salesperson__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Bid_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Phoenix_Bid_Submitted_Date__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Bid_Closed_Date__c</columns>
        <columns>Phoenix_Marketing_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Contracts</value>
        </filters>
        <label>Contracts Only Bids</label>
    </listViews>
    <listViews>
        <fullName>Customer_Update_Only</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_Name__c</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Is_Re_Bid__c</columns>
        <columns>Phoenix_Previous_Bid__c</columns>
        <columns>Phoenix_Customer_Type__c</columns>
        <columns>Phoenix_Salesperson__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Bid_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Phoenix_Bid_Submitted_Date__c</columns>
        <columns>Phoenix_Bid_Closed_Date__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Marketing_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Customer,Customer&apos;s Update,Customer Pending,Customner&apos;s Update</value>
        </filters>
        <label>Customer Update Only</label>
    </listViews>
    <listViews>
        <fullName>Draft_Bids_Only</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_Name__c</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Is_Re_Bid__c</columns>
        <columns>Phoenix_Salesperson__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Bid_Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Phoenix_Bid_Submitted_Date__c</columns>
        <columns>Phoenix_Internal_Target_Date__c</columns>
        <columns>Phoenix_Previous_Bid__c</columns>
        <columns>Contracts_Approver__c</columns>
        <columns>Phoenix_Customer_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft Bids Only</label>
    </listViews>
</CustomObject>